// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the MobileGridView component should render correctly when there are 3 or more participants plus the localParticipant 1`] = `
<div
  className="makeStyles-participantContainer-1"
>
  <mockConstructor
    className="mySwiper"
    modules={
      Array [
        [MockFunction],
      ]
    }
    pagination={true}
  >
    <mockConstructor
      className="makeStyles-swiperSlide-2"
      key="0"
    >
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "47.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={true}
          participant={
            Object {
              "identity": "test-local-participant",
              "sid": 0,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "47.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={
            Object {
              "identity": "test-participant-1",
              "sid": 1,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "47.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={
            Object {
              "identity": "test-participant-2",
              "sid": 2,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "47.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={
            Object {
              "identity": "test-participant-3",
              "sid": 3,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "47.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={
            Object {
              "identity": "test-participant-4",
              "sid": 4,
            }
          }
        />
      </div>
    </mockConstructor>
  </mockConstructor>
</div>
`;

exports[`the MobileGridView component should render correctly when there are two participants plus the localParticipant 1`] = `
<div
  className="makeStyles-participantContainer-1"
>
  <mockConstructor
    className="mySwiper"
    modules={
      Array [
        [MockFunction],
      ]
    }
    pagination={true}
  >
    <mockConstructor
      className="makeStyles-swiperSlide-2"
      key="0"
    >
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "97.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={true}
          participant={
            Object {
              "identity": "test-local-participant",
              "sid": 0,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "97.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={
            Object {
              "identity": "test-participant-1",
              "sid": 1,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "32%",
            "margin": "0.2em",
            "width": "97.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={
            Object {
              "identity": "test-participant-2",
              "sid": 2,
            }
          }
        />
      </div>
    </mockConstructor>
  </mockConstructor>
</div>
`;

exports[`the MobileGridView component should render correctly when there is one participant plus the localParticipant 1`] = `
<div
  className="makeStyles-participantContainer-1"
>
  <mockConstructor
    className="mySwiper"
    modules={
      Array [
        [MockFunction],
      ]
    }
    pagination={true}
  >
    <mockConstructor
      className="makeStyles-swiperSlide-2"
      key="0"
    >
      <div
        key="0"
        style={
          Object {
            "height": "48%",
            "margin": "0.2em",
            "width": "97.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={true}
          participant={
            Object {
              "identity": "test-local-participant",
              "sid": 0,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "48%",
            "margin": "0.2em",
            "width": "97.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={
            Object {
              "identity": "test-participant-1",
              "sid": 1,
            }
          }
        />
      </div>
    </mockConstructor>
  </mockConstructor>
</div>
`;

exports[`the MobileGridView component should render correctly when there is only the localParticipant 1`] = `
<div
  className="makeStyles-participantContainer-1"
>
  <mockConstructor
    className="mySwiper"
    modules={
      Array [
        [MockFunction],
      ]
    }
    pagination={true}
  >
    <mockConstructor
      className="makeStyles-swiperSlide-2"
      key="0"
    >
      <div
        key="0"
        style={
          Object {
            "height": "48%",
            "margin": "0.2em",
            "width": "97.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={true}
          participant={
            Object {
              "identity": "test-local-participant",
              "sid": 0,
            }
          }
        />
      </div>
      <div
        key="0"
        style={
          Object {
            "height": "48%",
            "margin": "0.2em",
            "width": "97.5%",
          }
        }
      >
        <Participant
          isLocalParticipant={false}
          participant={Object {}}
        />
      </div>
    </mockConstructor>
  </mockConstructor>
</div>
`;
